Add Styles and Bump Version

--- a/buuild-source-select.html
+++ b/buuild-source-select.html
@@ -43,18 +43,16 @@ Example:
 
     #selectCategoriesUuid,
     #selectTreeId {
-    
         width: 400px;
         max-width: 80vw;
         max-height: 80vh;
     }
-    :host ::slot .iron-list {
 
+    :host iron-list {
         max-height: 240px;
     }
 
-    :host ::slot .iron-list > div {
-
+    :host iron-list > div {
         padding: 5px 10px 5px 25px;
         cursor: pointer;
     }
